--- a/src/css/base.css
+++ b/src/css/base.css
@@ -189,7 +189,7 @@ main {
 	border-radius: 12px;
 	will-change: transform;
 	border: 1px solid;
-	max-width: 330px;
+	max-width: 300px;
 }
 
 .item__caption-title {
@@ -198,6 +198,7 @@ main {
 
 .item__caption-description {
 	display: none;
+	max-width:300px;
 }
 
 .type {
@@ -429,6 +430,7 @@ main {
 	.article__title {
 		grid-column-end: 4; 
 		margin: 0;
+		-webkit-text-stroke:1px #785f5f;
 	}
 	.article__intro {
 		margin: 1.5rem 0;
@@ -445,56 +447,3 @@ main {
 }
 
 /* banku logo */
-.banku {
-    font-family: 'Shoguns Clan';
-    font-weight: normal;
-    font-style: normal;
-	font-size: 150px;
-	display: none;
-}
-
-.banku span {
-  position: absolute;
-  transform: translate(-50%, -50%);
-}
-
-.banku span:nth-child(1) {
-	color: transparent;
-	-webkit-text-stroke: 2px red;
-  }
-  
-.banku span:nth-child(2) {
-	color: red;
-	animation: animate 4s ease-in-out infinite;
-  }
-
-@keyframes animate {
-	0%,
-	100% {
-	  clip-path: polygon(
-		0% 45%,
-		16% 44%,
-		33% 50%,
-		54% 60%,
-		70% 61%,
-		84% 59%,
-		100% 52%,
-		100% 100%,
-		0% 100%
-	  );
-	}
-  
-	50% {
-	  clip-path: polygon(
-		0% 60%,
-		15% 65%,
-		34% 66%,
-		51% 62%,
-		67% 50%,
-		84% 45%,
-		100% 46%,
-		100% 100%,
-		0% 100%
-	  );
-	}
-  }
